--- a/styles/resultado_pesquisa.css
+++ b/styles/resultado_pesquisa.css
@@ -1,7 +1,6 @@
-#page-pesquisar {
-    height: 100vh;
+#page-resultado {
+    height: 80vh;
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
@@ -20,7 +19,8 @@
     text-align: center;
 }
 
-.container a {
+
+/* .container a {
     font: 700 1.6rem Archivo;
     align-self: center;
     text-decoration: none;
@@ -31,23 +31,7 @@
 
 .container a:hover {
     color: var(--color-text-hover);
-}
-
-.container button {
-    font: 700 2rem Archivo;
-    width: 50%;
-    height: 4.6rem;
-    margin: 2rem auto;
-    background: var(--color-button);
-    border: none;
-    border-radius: .8rem;
-    cursor: pointer;
-    transition: background .2s;
-}
-
-.container button:hover {
-    background: var(--color-button-hover);
-}
+} */
 
 .container .input-block {
     display: flex;
@@ -55,17 +39,16 @@
 }
 
 .container .input-block label {
-    font: 700 2.4rem Archivo;
+    font: 700 2rem Archivo;
 }
 
 .container .input-block input {
     font: 400 1.6rem Archivo;
-    margin: 1rem auto;
+    margin: 0 auto;
     width: 100%;
     height: 4rem;
     background: none;
     border: 0;
-    border-bottom: 1px solid var(--color-text);
     outline: none;
 }
 
@@ -73,8 +56,37 @@
     margin-top: 2rem;
 }
 
+.container footer {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-top: 8rem;
+}
+
+.container button {
+    font: 700 1.4rem Archivo;
+    width: 40%;
+    height: 3.6rem;
+    margin: 1rem auto;
+    background: var(--color-button);
+    border: none;
+    border-radius: .8rem;
+    cursor: pointer;
+    transition: background .2s;
+}
+
+.container footer .desativar {
+    font-size: 1.2rem;
+    width: 25%;
+    height: 3rem;
+}
+
+.container button:hover {
+    background: var(--color-button-hover);
+}
+
 @media (min-width: 1100px) {
-    #page-pesquisar {
+    #page-resultado {
         display: flex;
         justify-content: center;
     }
