--- a/styles/cadastrar_equipamento.css
+++ b/styles/cadastrar_equipamento.css
@@ -1,4 +1,4 @@
-#page-resultado {
+#page-cadastro {
     height: 80vh;
     display: flex;
     justify-content: center;
@@ -19,20 +19,6 @@
     text-align: center;
 }
 
-
-/* .container a {
-    font: 700 1.6rem Archivo;
-    align-self: center;
-    text-decoration: none;
-    color: var(--color-text);
-    transition: color .2s;
-    margin-top: 1.6rem;
-}
-
-.container a:hover {
-    color: var(--color-text-hover);
-} */
-
 .container .input-block {
     display: flex;
     flex-direction: column;
@@ -44,10 +30,11 @@
 
 .container .input-block input {
     font: 400 1.6rem Archivo;
-    margin: 0 auto;
+    margin: 0.2rem auto;
+    padding: 0 1rem;
     width: 100%;
-    height: 4rem;
-    background: none;
+    height: 3rem;
+    color: var(--color-button);
     border: 0;
     outline: none;
 }
@@ -75,27 +62,28 @@
     transition: background .2s;
 }
 
-.container footer .desativar {
-    font-size: 1.2rem;
-    width: 25%;
-    height: 3rem;
-}
-
 .container button:hover {
     background: var(--color-button-hover);
 }
 
 @media (min-width: 1100px) {
-    #page-resultado {
+    #page-cadastro {
         display: flex;
         justify-content: center;
     }
+    .container .campos {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-bottom: 35rem;
+        padding: 0 2rem;
+    }
+    .container .campos .input-block {
+        max-width: 30rem;
+        margin: 0;
+        margin-top: 2rem;
+    }
     .container {
         max-width: 700px;
-        display: flex;
-    }
-    .container footer {
-        margin-top: 20rem;
     }
     .container button {
         font-size: 2rem;
