--- a/styles/pesquisar_equipamento.css
+++ b/styles/pesquisar_equipamento.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 #page-pesquisar {
     height: 100vh;
     display: flex;
@@ -11,6 +15,7 @@
     border-radius: 1rem;
     display: flex;
     flex-direction: column;
+    margin-top: -15rem;
     padding: 2rem 2.4rem;
 }
 
@@ -67,10 +72,6 @@
     border: 0;
     border-bottom: 1px solid var(--color-text);
     outline: none;
-}
-
-.container .input-block+.input-block {
-    margin-top: 2rem;
 }
 
 @media (min-width: 1100px) {
